views: fix IconLabelBubbleView accessibility properties

IconLabelBubbleView is a Button and should use Button::GetAccessibleNodeData,
not Label::GetAccessibleNodeData. Setting its button text causes the right
behavior here.

Before: "This site is using your location."
After: "This site is using your location. Button."

Maybe ideally: "This site is using your location. Manage location access.
               Button."

... but that requires new strings.

Bug: 879014
Change-Id: I7b4840e17ea70eede41ee0b3095a8a2de288c6ea
Reviewed-on: https://chromium-review.googlesource.com/c/1331668
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607608}
Former-commit-id: c5c2f0c09a90e0c2b80c7c2863837e9beef8ecb6